src/main/kotlin/com/example/appjam/global/error/ErrorResponse.kt
package com.example.appjam.global.error

class ErrorResponse(
    val message: String
)
